*******************************************************************************
2.0.18 public release
*******************************************************************************

*******************************************************************************
2.0.17 public release
*******************************************************************************

Tue Jan 31 11:55:02 1995  Steve Haflich  <smh@vapor>

	* fi-basic-lep.el
	* fi-composer.el
	* fi-lep.el
	Remove casification by fi::frob-case-to-lisp which seems both
	unnecessary and problematic.

	* fi-keys.el
	Repair sublisp C-c C-d eof problem introduced by 2.0.16 switch from
	ptys to sockets.
	Check for nemacs in additiono to mule to disable raw capability in
	favor of WNN compatibility, etc.

	* fi-site-init.el
	(provide 'fi-site-init) so users can use (require 'fi-site-init).

	* fi-lep.el
	Fix misformatted error message.

	* doc/announce2_0_16.n


*******************************************************************************
2.0.16 public release
*******************************************************************************

Fri Jan 13 13:13:19 1995  Steve Haflich  <smh@vapor>

	* fi-keys.el
	Skip replacing self-insert-command with fi:self-insert-command when
	running under Mule, as wnn input translation is incompatible with raw.
	Until we have a better solution, fi:raw-mode will be inoperable under
	Mule.

Tue Jan 10 12:02:21 1995  Steve Haflich  <smh@vapor>

	* fi-version.el
	Fixed lemacs vs xemacs conditionalization.

	* fi-lep.el
	expand-file-name in fi:bug-report when listing emacs-lisp files.

Mon Jan  9 15:45:28 1995  Steve Haflich  <smh@vapor>

*******************************************************************************
2.0.16
*******************************************************************************

	Changed references from "lemacs" to "xemacs" in both file names and
	in the variable fi::emacs-type, which now takes one of the values